(ocamllex driver_lexer parse_smtv2_model_lexer)
(menhir (modules driver_parser parse_smtv2_model_parser))

(library
     (name why3_driver)
     (public_name why3.driver)
     (modules
        prove_client call_provers driver_ast driver_parser driver_lexer driver
        whyconf autodetection
        smt2_model_defs parse_smtv2_model_parser
        collect_data_model parse_smtv2_model_lexer parse_smtv2_model
        parse_smtv2_model
     )
     (flags -open Why3_util -open Why3_core -w A-4-9-41-44-45-50-52@5@8@48)
     (libraries why3.util why3.core num unix)
)
