(executable
        (public_name why3session)
        (name why3session_main)
        (modules why3session_lib why3session_info
                 why3session_html why3session_latex why3session_update
                 why3session_main)
       (libraries why3)
       (flags -open Why3.V1 -linkall)
       (preprocess (pps bisect_ppx))
       (package why3)
)
